--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,12 @@
     <title>Alurapic</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/efeitos.css">
     <script src="js/lib/angular.min.js"></script>
+    <script src="js/lib/angular-animate.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/controllers/fotos-controller.js"></script>
+    <script src="js/directives/minhas-directivas.js"></script>
 </head>
 <body ng-controller="FotosController">
     <!-- dentro do body -->
@@ -16,14 +19,18 @@
         <div class="jumbotron">
             <h1 class="text-center">Alurapic</h1>
         </div>
-        <div class="panel panel-default" ng-repeat="foto in fotos">
-            <div class="panel-heading">
-               <h3>{{foto.titulo}}</h3>
+        <div class="row">
+            <div class="col-md-12">
+                <form>
+                    <input ng-model="filtro" ng-model-options="{ debounce: 500 }" type="text" class="form-control" placeholder="filtrar">
+                </form>
             </div>
-            <div class="panel-body">
+        </div>
+        <div class="row">
+            <meu-painel class="col-md-2 painel-animado" ng-repeat="foto in fotos | filter: filtro" titulo="{{foto.titulo}}">
                 <img class="img-responsive center-block" src="{{foto.url}}" alt="{{foto.titulo}}">
-            </div>
-       </div>
+            </meu-painel>
+        </div>
     </div><!-- fim container -->
 </body>
 </html>
